Sat Nov  6 19:16:57 *ET 1999  Sven Neumann <sven@gimp.org>

	* app/about_dialog.c
	* app/gimpobject.c
	* app/gimprc.c
	* app/layer.c
	* app/preferences_dialog.c
	* libgimp/gimpfileselection.c: plugged more mem-leaks	

Sat Nov  6 15:28:11 MET 1999  Sven Neumann <sven@gimp.org>

	* app/gdisplay.h: Reverted my latest change. It disturbed image 
	rendering. 	

Sat Nov  6 14:13:12 MET 1999  Sven Neumann <sven@gimp.org>

	* app/drawable_cmds.c
	* tools/pdbgen/pdb/drawable.pdb: some PDB names weren't changed here
	but in all plug-ins and scripts.

	Whoever created the PDB interface for drawable_thumbnail(), could
	you please change this sentence from the description:
	   "The alpha channel also returned if the drawable has one."
	I don't get what it wants me to tell...

Sat Nov  6 03:57:20 MET 1999  Sven Neumann <sven@gimp.org>

	* app/gdisplay_color_ui.c: fixed a crash on Cancel that occured 
	due to bad list handling

	* app/module_db.c: indentation madness, no changes

	* app/nav_window.c: set the zoom label and slider first, then 
	update the preview. Gives better user feedback. This is now what 
	bugreport #3354 suggest, but it comes close.

	* plug-ins/common/plugindetails.c: tried to fix the strange resizing
	of the dialog. Should fix bug #3352.

Fri Nov  5 15:32:15 MET 1999  Sven Neumann <sven@gimp.org>

	* app/edit_selection.c: when moving layers/masks freeze the undo
	after the first move to avoid that each and every small movements
	puts an undo on the stack. Significantly speeds up layer moves 
	and especially the undo of a layer move.

	* app/gdisplay.h: correct rounding errors

	* app/gimpimage.c: correctly display floating selections in the
	composite_preview instead of ignoring them

	* app/channels_dialog.c
	* app/layers_dialog.c
	* app/lc_dialog.c: s/gtk_widget_draw/gtk_widget_queue_draw/

Thu Nov  4 22:06:24 GMT 1999 Andy Thomas <alt@gimp.org>

	* app/gradient_select_cmds.c
	* tools/pdbgen/pdb/gradient_select.pdb
